# todo-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
apps/todo/: forms.py  models.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py  0002_task.py
apps/todo/static/apps.todo/css/: home.css  login.css
backend/apps/todo/: urls.py  views.py
backend/apps/todo/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py  wsgi.py
backend/static/: staticfiles.json
backend/static/apps.todo/css/: home.b835980853a7.css
backend/templates/apps.todo/: base.html  create-task.html  home.html
core/: settings.py
nginx/: conf.d
templates/apps.todo/: create-task.html  delete-task.html  home.html  login.html  signup.html  task-detail.html  update-task.html
